organizando os arquivos

--- a/nivel.html
+++ b/nivel.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
-    <link rel="stylesheet" href="assets/css/menuLateral.css">
     
 </head>
 
@@ -90,12 +89,10 @@
             </div>
             <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" id="menuLateral"> 
+                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
-
-            <div class="especial"></div>
             </div>
 
     </div>
@@ -135,7 +132,7 @@
      
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/menuLateral.js"></script>
+    <script src="assets/js/menu-modal.js"></script>
 </body>
 
 </html>
