alterações menu - mobile, mecânica já funciona

--- a/fase1.html
+++ b/fase1.html
@@ -189,6 +189,8 @@
         <div class="face back">  </div>
          <div class="face front">  </div>
     </div>
+    <!--Perguntar sobre uma imagem melhor para colocar aqui-->
+     <img src="assets/img/match.png" id="imgMatchSing"/>
 </div>
 
   
