--- a/nivel.html
+++ b/nivel.html
@@ -89,13 +89,15 @@
             </div>
             <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
+                <a class="menu-mobile" id="botao-menu-modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
-
     </div>
+
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
+<div id="menu-modal"><div id="botao-voltar"><p> oooooooooooooi ver se aparece </p></div></div>
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
