--- a/nivel.html
+++ b/nivel.html
@@ -97,7 +97,21 @@
     </div>
 
 <!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
-<div id="menu-modal"><div id="botao-voltar"><p> oooooooooooooi ver se aparece </p></div></div>
+<div id="menu-modal">
+    <ul class="list-Modal">
+        <li>
+            <a href="#">
+            <div class=" elem-menu-lateral">
+            <img  src="assets/img/home.svg">
+            <p> Início <p> 
+            <div>
+            </a>
+        </li>
+    </ul>
+
+    <div class="espaco-6"></div>
+    <div id="botao-voltar"><p> Voltar </p></div>
+</div>
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
