--- a/vitoria.html
+++ b/vitoria.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
-
+<!--Perguntar sobre o sistema de pontuação - NAO ESQUECER -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Fase 2 - Jogo da memória</title>
+    <title> Vitória | Jogo da memória</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
-    <link rel="stylesheet" href="assets/css/fase2.css">
+    <link rel="stylesheet" href="assets/css/vitoria.css">
 
-    
 </head>
 
-<body>
- <!-- menu Desktop - rodando perfeito -->
+<body class = "fundo">
+
+     <!-- menu Desktop -->
 
     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
@@ -68,9 +68,7 @@
         </ul>
     </div>
 
-
-    <div class="fundo">
-<!-- menu mobile-->
+    <!-- menu mobile-->
     <div class="espaco-3"></div>
     <div class="espaco-3 menu-mobile"></div>
     <div class="menu-mobile">
@@ -90,110 +88,55 @@
                     <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
                 </a>
             </div>
-            <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
+            <!-- lembrar de acrescentar o mobile quando eu conseguir -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" id="menumodal"> 
+                <a class="menu-mobile" id="botao-menu-modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
-
     </div>
 
-<!--fim menu mobile-->
-<!-- Conteúdo da página -->
 
 
-    <div class="espaco-3"> </div>
-    <h1 class="subtitulo-2" id="titulo-jogo">TEMPO</h1>
+    <!--Alinhar verticalmente os títulos-->
+    <div class="espaco-6"></div>
+    <div id="trofeu">
+    <img src="assets/img/trofeu.png">
+    </div>
+    <div class="espaco-6"></div>
+    <h1 class="borda titulo">VOCÊ GANHOU!</h1>
     <div class="espaco-1"></div>
-    <div class="espaco-3 mostrar-no-desktop"> </div>
-    <p class="largura-texto"> Ligue as imagens com os nomes! </p>
-  
-
-<!-- Painel ensinando como jogar -->
-
-<div id="container">
-    <div class="card" id="card0">
-        <div class="face back">  </div>
-         <div class="face front"> </div>
+    <h3 class="subtitulo-t borda">Sua pontuação nessa fase foi: </h3>
+    <div class="espaco-3"></div>
+    <!--Espaço para botão de pontuação -->
+    <div class="display-center">
+        <div id="points-box" class="points-box">
+            <img  class="medal" src="assets/img/medalha.svg">
+            <p id="points" class="points"> oi </p>
+            <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
+        </div>
     </div>
-     <div class="card" id="card1">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
+     <div class="espaco-6"></div>
+     <div class="espaco-6"></div>
+    <div class="row">
+       <div class="col"></div>
+     <div class="col">
+        <a class="btn btn-primary btn-playAgain" href="fase2.html"> REFAZER FASE  </a>
+        <!-- Pegar a pagina anterior com javascript -->
+     </div>
+      <div class="col"></div>
+      <div class="col">
+        <a class="btn btn-primary btn-next" href="fase2.html"> PRÓXIMA FASE  </a>
+        <!-- ver prox fase com js -->
+     </div>
+        <div class="col"></div>
+    
     </div>
-     <div class="card" id="card2">
-         <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-     <div class="card" id="card3">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-     <div class="card" id="card4">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-     <div class="card" id="card5">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card6">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card7">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card8">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card9">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card10">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card11">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card12">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card13">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card14">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-    <div class="card" id="card15">
-        <div class="face back">  </div>
-         <div class="face front">  </div>
-    </div>
-
-    <!--As imagens nao ficaram perfeitas, tirar repeat-->
-
-    <!--Perguntar sobre uma imagem melhor para colocar aqui-->
-     <img src="assets/img/match.png" id="imgMatchSing"/>
-</div>
-
-  
-
-<!--Fim  painel  -->
-
+   
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/menu-modal.js"></script>
-    <script src="assets/js/fase2.js"></script>
 </body>
 
 </html>
