alterações: compartilhar e vitoria

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -10,25 +10,27 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
+    <link rel="stylesheet" href="assets/css/compartilhar.css">
     
 </head>
 
 <body>
- <!-- menu Desktop - rodando perfeito -->
+       <!-- menu Desktop -->
 
     <div class="menu-desktop">
-        <ul class="menu-desktop">
+        <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
             <a class="menu-desktop" href="index.html"> 
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
+        </li>
         <li class = "menu-desktop espaco-6"></li>
         <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
         <li class="menu-desktop">
-            <a href="menu-desktop index.html">
+            <a href="index.html">
             <div class=" menu-desktop elem-menu-lateral">
             <img  class ="menu-desktop" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
@@ -64,9 +66,9 @@
         </li>
         </ul>
     </div>
-
-    <div class="fundo">
-<!-- menu mobile-->
+<div class="fundo">
+    <!-- menu mobile-->
+    <div class="espaco-3"></div>
     <div class="espaco-3 menu-mobile"></div>
     <div class="menu-mobile">
 
@@ -85,14 +87,13 @@
                     <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
                 </a>
             </div>
-            <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
+            <!-- lembrar de acrescentar o mobile quando eu conseguir -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" href="#menu-mobile-ativado"  data-toggle="modal"> 
+                <a class="menu-mobile" id="botao-menu-modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
-
     </div>
 
 <!--fim menu mobile-->
@@ -107,9 +108,7 @@
     <div class="espaco-3"></div>
     <!--Botoezinhos-->
     <div class="espaco-3"></div>
-    <div class="cont-divider">
         <div class="divider"></div>
-    </div>
     <div class="espaco-3"></div>
 
     <h1 class="subtitulo-2">SIGA O EIC</h1>
@@ -118,6 +117,7 @@
     <div class="espaco-3"></div>  
     <!--Botoezinhos-->
     <div class="espaco-3"></div>
+</div>
      
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
