--- a/vitoria.html
+++ b/vitoria.html
@@ -97,9 +97,7 @@
             </div>
     </div>
 
-
-
-    <!--Alinhar verticalmente os títulos-->
+<!--Conteudo da pagina -->
     <div class="espaco-6"></div>
     <div id="trofeu">
     <img src="assets/img/trofeu.png">
@@ -109,7 +107,7 @@
     <div class="espaco-1"></div>
     <h3 class="subtitulo-t borda">Sua pontuação nessa fase foi: </h3>
     <div class="espaco-3"></div>
-    <!--Espaço para botão de pontuação -->
+    <!-- Fazer os botoes responsivos, ficar um cada linha quando diminuir a tela -->
     <div class="display-center">
         <div id="points-box" class="points-box">
             <img  class="medal" src="assets/img/medalha.svg">
