pagina de vitoria + compartilhar

--- a/compartilhar.html
+++ b/compartilhar.html
@@ -106,7 +106,12 @@
 
     <p> Compartilhe o jogo da memória com seus amigos e familiares </p>
     <div class="espaco-3"></div>
-    <!--Botoezinhos-->
+    <!--Botoezinhos |  arrumar largura das colunas -->
+    <div class="row">
+        <div class="col"><img src="assets/img/redesSociais/btn-facebook.svg"></div>
+        <div class="col"><img src="assets/img/redesSociais/btn-whats.svg"></div>
+        <div class="col"><img src="assets/img/redesSociais/btn-insta.svg"></div>
+        </div>
     <div class="espaco-3"></div>
         <div class="divider"></div>
     <div class="espaco-3"></div>
@@ -115,7 +120,13 @@
     <div class="espaco-3"></div>
     <p> Interaja com a gente nas mídias sociais e em nosso site! </p>
     <div class="espaco-3"></div>  
-    <!--Botoezinhos-->
+    <!--Botoezinhos | arrumar largura das colunas-->
+     <div class="row">
+        <div class="col"><img src="assets/img/redesSociais/btn-facebook-line.svg"></div>
+        <div class="col"><img src="assets/img/redesSociais/btn-insta-line.svg"></div>
+        <div class="col"><img src="assets/img/redesSociais/btn-youtube-line.svg"></div>
+        <div class="col"><img src="assets/img/redesSociais/btn-site-line.svg"></div>
+        </div>
     <div class="espaco-3"></div>
 </div>
      
