--- a/fase1.html
+++ b/fase1.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/fase1.css">
+    <link rel="stylesheet" href="assets/css/vitoria.css">
 
-    
 </head>
 
 <body>
@@ -191,7 +191,15 @@
     </div>
     <!--Perguntar sobre uma imagem melhor para colocar aqui-->
      <img src="assets/img/match.png" id="imgMatchSing"/>
-</div>
+    </div>
+
+    <!--display de pontos -->
+    <div class="display-center">
+        <div id="points-box" class="points-box">
+            <img  class="medal" src="assets/img/medalha.svg">
+            <p id="points" class="points"> 000 </p>
+            <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
+        </div>
 
   
 
