--- a/nivel.html
+++ b/nivel.html
@@ -132,7 +132,7 @@
     <div class="espaco-6"></div>
 
 
-        <!--alinhar botoes ao centro - feito -->
+        <!--alinhar botoes ao centro - feito, pensar em fazer com on click -->
         <div class="row">
             <div class="col"><a class="btn btn-primary btn-facil" href="fase1.html"> FÁCIL </a> </div>
         </div>
