--- a/vitoria.html
+++ b/vitoria.html
@@ -111,7 +111,7 @@
     <div class="display-center">
         <div id="points-box" class="points-box">
             <img  class="medal" src="assets/img/medalha.svg">
-            <p id="points" class="points"> oi </p>
+            <p id="points" class="points"> 000 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
         </div>
     </div>
@@ -135,6 +135,7 @@
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/vitoria.js"></script>
 </body>
 
 </html>
