alterações necessarias para pagina de vitoria

--- a/fase1.html
+++ b/fase1.html
@@ -195,7 +195,7 @@
 
     <!--display de pontos -->
     <div class="display-center">
-        <div id="points-box" class="points-box">
+        <div class="points-box">
             <img  class="medal" src="assets/img/medalha.svg">
             <p id="points" class="points"> 000 </p>
             <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
