--- a/vitoria.html
+++ b/vitoria.html
@@ -120,12 +120,12 @@
     <div class="row">
        <div class="col"></div>
      <div class="col">
-        <a class="btn btn-primary btn-playAgain" href="fase2.html"> REFAZER FASE  </a>
+        <a class="btn btn-primary btn-playAgain" href="fase2.html" id="again"> REFAZER FASE  </a>
         <!-- Pegar a pagina anterior com javascript -->
      </div>
       <div class="col"></div>
       <div class="col">
-        <a class="btn btn-primary btn-next" href="fase2.html"> PRÓXIMA FASE  </a>
+        <a class="btn btn-primary btn-next" href="fase2.html" id="next"> PRÓXIMA FASE  </a>
         <!-- ver prox fase com js -->
      </div>
         <div class="col"></div>
