ocultar menu modal para o projeto ficar mais organizado, por enquanto

--- a/nivel.html
+++ b/nivel.html
@@ -97,7 +97,7 @@
     </div>
 
 <!--Menu modal que só aparece quando o botao-menu-modal é clicado-->
-<div id="menu-modal">
+<!--<div id="menu-modal">
     <ul class="list-modal">
         <li>
             <a href="#">
@@ -120,7 +120,7 @@
     </ul>
     <div class="espaco-6"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
-</div>
+</div>-->
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
