fazer o jogo todo funcionar em uma unica pagina

--- a/fase1.html
+++ b/fase1.html
@@ -210,6 +210,7 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
     <script src="assets/js/fase1.js"></script>
+    <script scr="assets/js/functions.js"></script>
 </body>
 
 </html>
