--- a/jogo.html
+++ b/jogo.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
-    <link rel="stylesheet" href="assets/css/fase1.css">
+    <link rel="stylesheet" href="assets/css/jogo.css">
+    <link rel="stylesheet" id="folha" href="assets/css/fase1.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
 
 </head>
@@ -207,7 +208,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/menu-modal.js"></script>
-    <script src="assets/js/fase1.js"></script>
+    <script src="assets/js/jogo.js"></script>
 </body>
 
 </html>
