--- a/nivel.html
+++ b/nivel.html
@@ -134,14 +134,14 @@
 
         <!--alinhar botoes ao centro - feito, pensar em fazer com on click -->
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil" id ="facil" href="fase1.html" onclick="fase(this.id)"> FÁCIL </a> </div>
+            <div class="col"><a class="btn btn-primary btn-facil" id ="facil" href="jogo.html" onclick="fase(this.id)"> FÁCIL </a> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio" id="medio" href="fase1.html"  onclick="fase(this.id)"> MÉDIO  </a>
+                <a class="btn btn-primary btn-medio" id="medio" href="jogo.html"  onclick="fase(this.id)"> MÉDIO  </a>
             </div>
         </div>
 
@@ -149,7 +149,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil" id="dificil" href="fase1.html"  onclick="fase(this.id)"> DÍFICIL </a>
+            <a class="btn btn-primary btn-dificil" id="dificil" href="jogo.html"  onclick="fase(this.id)"> DÍFICIL </a>
             </div>
         </div>
 
