--- a/jogo.html
+++ b/jogo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/jogo.css">
+     <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
 
 </head>
@@ -81,42 +82,90 @@
 
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
-                <a class = "menu-mobile" href="index.html"> 
-                    <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
-                </a>
+                <div id="btn-voltar-m">
+                    <a class = "menu-mobile" href="index.html"> 
+                        <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
+                    </a>
+                </div>
             </div>
             <div class="col menu-mobile">
                 <a class="menu-mobile" href="index.html"> 
                     <img class="nav-elem menu-mobile" src="assets/img/nav/logo-eic-nav.svg">
                 </a>
             </div>
-            <!-- lembrar de arrumar section, pra ver como fica | arrumar para funcionar e abrir igual do pc no celular -->
             <div class="col menu-mobile">
-                <a class="menu-mobile" id="menumodal"> 
+                <a class="menu-mobile" id="botao-menu-modal"> 
                     <img class="nav-elem" src="assets/img/nav/menu.svg">
                 </a>
             </div>
             </div>
-
     </div>
-    <!-- <div class="modal menu-lateral-modal"> 
-     <ul class="ULmodal"> 
-     <li class="espaco-3"> </li>
-      <li> <img class ="logo-eic-modal-centro" src="assets/img/logo-eic-branco.png">  </li> 
-      <li> <br> </li> 
-      <li> <br> </li>
-       <li> <a href="#"> 
-       <div class="elem-menu-modal">  
-       <img src="assets/img/home.svg">
-        <p> Início </p> </div> </a> </li> <li> <br> <br> <p> Sobre o jogo </p> </li> 
-         <li> Créditos </li> <li> Compartilhar </li></ul> </div> -->
+    
+<!--Menu modal que só aparece quando o botao-menu-modal é clicado, funcionando e aparecendo-->
+<div id="menu-modal" class="menu-mobile">
+    <ul class="list-modal">
+         <li>
+            <a href="index.html">
+            <div class= "logo-modal">
+            <img class="tamanho-logo-modal" src="assets/img/logo-eic-branco.png">
+            <div>
+            </a>
+        </li>
+        <li>
+            <a href="index.html">
+            <div class= "elem-menu-modal">
+            <img class="tamanho-img-modal" src="assets/img/home.svg">
+            <p> Início <p> 
+            <div>
+            </a>
+        </li>
+         <li>
+            <a href="sobre-o-jogo.html">
+            <div class= "elem-menu-modal">
+            <img class="tamanho-img-modal" src="assets/img/sobre-o-jogo.svg">
+            <p> Sobre o Jogo <p> 
+            <div>
+            </a>
+        </li>
+        <li><div class="espaco-6"></div></li>
+         <li>
+            <a href="creditos.html">
+            <div class= "elem-menu-modal">
+            <img class="tamanho-img-modal" src="assets/img/creditos.svg">
+            <p> Créditos <p> 
+            <div>
+            </a>
+        </li>
+         <li><div class="espaco-6"></div></li>
+         <li>
+            <a href="compartilhar.html">
+            <div class= "elem-menu-modal">
+            <img class="tamanho-img-modal" src="assets/img/compartilhar.svg">
+            <p> Compartilhar <p> 
+            <div>
+            </a>
+        </li>
+    </ul>
+    <div class="espaco-6"></div>
+    <div id="botao-voltar"><p> Voltar </p></div>
+</div>
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
-
-
     <div class="espaco-3"> </div>
+    <div class="row menu-desktop">
+        <div id="btn-voltar-d">
+        <img class="img-voltar" src="assets/img/nav/voltar.svg">
+        </div>
+    </div>
+<!-- Opção sair - fazer o css  -->
+<div id="modal-sair">
+<p> oioioio <p>
+</div>
+
+<!-- Fim opção sair -->    
     <h1 class="subtitulo-2" id="titulo-jogo">TEMPO</h1>
+
     <div class="espaco-1"></div>
     <div class="espaco-3 mostrar-no-desktop"> </div>
     <p class="largura-texto"> Observe os cartões e memorize as posições! </p>
@@ -188,6 +237,7 @@
     <div class="card" id="card15">
         <div class="face back">  </div>
          <div class="face front">  </div>
+         
     </div>
     <!--Perguntar sobre uma imagem melhor para colocar aqui-->
      <img src="assets/img/match.png" id="imgMatchSing"/>
