--- a/nivel.html
+++ b/nivel.html
@@ -29,10 +29,11 @@
         <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
+
         <li class="menu-desktop">
             <a href="index.html">
             <div class=" menu-desktop elem-menu-lateral">
-            <img  class ="menu-desktop" src="assets/img/home.svg">
+            <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
             <div>
             </a>
