criação da função de pontuação (ainda não funciona)

--- a/jogo.html
+++ b/jogo.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/jogo.css">
-     <link rel="stylesheet" href="assets/css/menu-modal.css">
+    <link rel="stylesheet" href="assets/css/menu-modal.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
 
 </head>
@@ -152,15 +152,28 @@
 
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
+
     <div class="espaco-3"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-d">
         <img class="img-voltar" src="assets/img/nav/voltar.svg">
         </div>
     </div>
+
 <!-- Opção sair - fazer o css  -->
 <div id="modal-sair">
-<p> oioioio <p>
+    <img class="btn-close" id="fechar" scr="assets/img/fechar.svg">
+    <div class="espaco-6"></div>
+    <div class="espaco-6"></div>
+    <img  class="modal-exclamacao" scr="assets/img/exclamacao.svg">
+    <div class="espaco-6"></div>
+    <h1 class="fonte-modal-sair-destaque"> Sair do jogo </h1> 
+    <div class="espaco-3"></div>
+    <h1 class="fonte-modal-sair"> Tem certeza que deseja sair do jogo </h1>
+    <div class="row">
+        <div class="col" id="sair"> SIM </div>
+        <div class="col" id="ficar"> NÂO </div>
+    </div>
 </div>
 
 <!-- Fim opção sair -->    
