--- a/jogo.html
+++ b/jogo.html
@@ -162,7 +162,8 @@
 
 <!-- Opção sair - fazer o css  -->
 <div id="modal-sair">
-    <img class="btn-close" id="fechar" scr="assets/img/fechar.svg">
+    <img class="btn-close" id="fechar" scr="assets/img/fechar.png">
+    <!--Não sei porque nao ta funcionando-->
     <div class="espaco-6"></div>
     <div class="espaco-6"></div>
     <img  class="modal-exclamacao" scr="assets/img/exclamacao.svg">
