--- a/vitoria.html
+++ b/vitoria.html
@@ -172,12 +172,12 @@
         <div class="row">
             <div class="col"></div>
             <div class="col">
-                    <a class="btn btn-primary btn-playAgain" href="fase2.html" id="again"> REFAZER FASE  </a>
+                    <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again"> REFAZER FASE  </a>
                     <!-- Pegar a pagina anterior com javascript -->
             </div>
             <div class="col"></div>
             <div class="col">
-                    <a class="btn btn-primary btn-next" href="fase2.html" id="next"> PRÓXIMA FASE  </a>
+                    <a class="btn btn-primary btn-next" href="jogo.html" id="next"> PRÓXIMA FASE  </a>
                     <!-- ver prox fase com js -->
             </div>
                 <div class="col"></div>
@@ -188,6 +188,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/vitoria.js"></script>
+    <script src="assets/js/nivel.js"></script>
     <script src="assets/js/menu-modal.js"></script>
 </body>
 
