função desaparecer match feita

--- a/vitoria.html
+++ b/vitoria.html
@@ -172,12 +172,12 @@
         <div class="row">
             <div class="col"></div>
             <div class="col">
-                    <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again"> REFAZER FASE  </a>
+                    <a class="btn btn-primary btn-playAgain " href="jogo.html" id="again" onclick="fase(this.class[4])" > REFAZER FASE  </a>
                     <!-- Pegar a pagina anterior com javascript -->
             </div>
             <div class="col"></div>
             <div class="col">
-                    <a class="btn btn-primary btn-next" href="jogo.html" id="next"> PRÓXIMA FASE  </a>
+                    <a class="btn btn-primary btn-next next" href="jogo.html" id="next" onclick="fase(this.id)" > PRÓXIMA FASE  </a>
                     <!-- ver prox fase com js -->
             </div>
                 <div class="col"></div>
