Alterações no desing - página inicial

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <h1 class="subtitulo-t borda">Doença de chagas</h1>
     <div class="espaco-3"></div>
     <img src="assets/img/cards-img.png" class="cards-inicial">
-    <div class="espaco-3"></div>
+    <div class="espaco-6"></div>
     <div class="row">
         <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
     </div>
    <div class="espaco-6"></div>
-   <!-- pROBLEMA PARA CENTRALIZAR URGENTE ( caixas ) -->
-   
-    <div class="caixa-btns-c">
+   <!-- PROBLEMA PARA CENTRALIZAR URGENTE ( caixas ) -->
+    
+    <div class="caixa-btns-c display-center">
         <div class = "elem-btn-c">
         <div class="btn-circ" id="btn-circ-1"> <a href="instrucoes.html"> <img src="assets/img/botao-instruções.svg"></a></div>
         </div>
