Alteração na página de instruções ( + dinâmico)

--- a/fim.html
+++ b/fim.html
@@ -156,9 +156,9 @@
         <img src="assets/img/trofeu.png">
         </div>
         <div class="espaco-6"></div>
-        <h1 class="borda titulo"> FIM! </h1>
+        <h1 class="borda titulo"> PARABÉNS! </h1>
         <div class="espaco-1"></div>
-        <h3 class="subtitulo-t borda"> Você completou todas as fases! </h3>
+        <h3 class="subtitulo-t borda"> Você completou todas as fases! Sua pontuação total foi: </h3>
         <div class="espaco-3"></div>
         <!-- Fazer os botoes responsivos, ficar um cada linha quando diminuir a tela -->
         <div class="espaco-6"></div>
