Esquema de fases e vitória prontos

--- a/fim.html
+++ b/fim.html
@@ -160,7 +160,13 @@
         <div class="espaco-1"></div>
         <h3 class="subtitulo-t borda"> Você completou todas as fases! Sua pontuação total foi: </h3>
         <div class="espaco-3"></div>
-        <!-- Fazer os botoes responsivos, ficar um cada linha quando diminuir a tela -->
+           <div class="display-center">
+            <div id="points-box" class="points-box">
+                <img  class="medal" src="assets/img/medalha.svg">
+                <p id="points" class="points">   300 </p>
+                <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
+            </div>
+        </div>
         <div class="espaco-6"></div>
 
         <div class="col">
