Alteralçao para esquema de fases e niveis ( ainda nao finalizado)

--- a/vitoria.html
+++ b/vitoria.html
@@ -168,18 +168,18 @@
                 <!--Arrumar aqui para o texto e a imagem ficarem alinhados-->
             </div>
         </div>
+
         <div class="espaco-6"></div>
         <div class="espaco-6"></div>
-        <div class="row">
-            <div class="col"></div>
-            <div class="col">
+
+        <div class="row" id ="DispBtns">
+            <div class="col-lg-5">
                     <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again" onclick="fase(this.classList[3])" > REFAZER FASE  </a>  
             </div>
-            <div class="col"></div>
-            <div class="col">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-5">
                     <a class="btn btn-primary btn-next" href="jogo.html" id="next" onclick="fase(this.classList[3])" > PRÓXIMA FASE  </a> 
             </div>
-                <div class="col"></div>
         </div>
     </div>
 
