--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    
     <title>TesteProjetoEIC</title>
     
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -24,7 +25,7 @@
     <img src="assets/img/cards-img.png" class="cards-inicial">
     <div class="espaco-6"></div>
     <div class="row">
-        <div class="col"><a class="btn btn-primary" href="nivel.html"> INICIAR </a></div>
+        <div class="col"><a class="btn btn-primary" href="instrucoes.html"> INICIAR </a></div>
     </div>
    <div class="espaco-6"></div>
    <!-- PROBLEMA PARA CENTRALIZAR URGENTE ( caixas ) -->
