--- a/nivel.html
+++ b/nivel.html
@@ -38,7 +38,7 @@
             <div>
             </a>
         </li>
-        <li class =  "menu-desktop espaco-3"></li>
+        <li class = "menu-desktop espaco-3"></li>
         <li>
             <a  class="menu-desktop" href="sobre-o-jogo.html">
             <div class=" menu-desktop elem-menu-lateral">
@@ -156,14 +156,14 @@
     <div class="espaco-6"></div>
 
         <div class="row">
-            <div class="col"><a class="btn btn-primary btn-facil" id ="facil" href="jogo.html" onclick="fase(this.id)"> FÁCIL </a> </div>
+            <div class="col"><a class="btn btn-primary btn-facil 1" id ="facil" href="jogo.html" onclick="fase(this.id, classList[3])"> FÁCIL </a> </div>
         </div>
 
         <div class="espaco-6"></div>
 
         <div class="row">
             <div class="col">
-                <a class="btn btn-primary btn-medio" id="medio" href="jogo.html"  onclick="fase(this.id)"> MÉDIO  </a>
+                <a class="btn btn-primary btn-medio 1" id="medio" href="jogo.html"  onclick="fase(this.id, classList[3])"> MÉDIO  </a>
             </div>
         </div>
 
@@ -171,7 +171,7 @@
 
         <div class="row">
             <div class="col">
-            <a class="btn btn-primary btn-dificil" id="dificil" href="jogo.html"  onclick="fase(this.id)"> DÍFICIL </a>
+            <a class="btn btn-primary btn-dificil 1" id="dificil" href="jogo.html"  onclick="fase(this.id, classList[3])"> DÍFICIL </a>
             </div>
         </div>
 
