Reestruturacao para 3 fases e 3 niveis - problemas no nivel

--- a/vitoria.html
+++ b/vitoria.html
@@ -174,11 +174,11 @@
 
         <div class="row" id ="DispBtns">
             <div class="col-lg-5">
-                    <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again" onclick="fase(this.classList[3])" > REFAZER FASE  </a>  
+                    <a class="btn btn-primary btn-playAgain" href="jogo.html" id="again" onclick="fase(this.classList[3], this.classList[4])" > REFAZER FASE  </a>  
             </div>
             <div class="col-lg-2"></div>
             <div class="col-lg-5">
-                    <a class="btn btn-primary btn-next" href="jogo.html" id="next" onclick="fase(this.classList[3])" > PRÓXIMA FASE  </a> 
+                    <a class="btn btn-primary btn-next" href="jogo.html" id="next" onclick="fase(this.classList[3], this.classList[4])" > PRÓXIMA FASE  </a> 
             </div>
         </div>
     </div>
