modal sair com imagens funcionando - pronto

--- a/jogo.html
+++ b/jogo.html
@@ -83,7 +83,7 @@
         <!-- lembrar de mudar o link de voltar dependendo da pagina atual-->
             <div class="col menu-mobile">
                 <div id="btn-voltar-m">
-                    <a class = "menu-mobile" href="index.html"> 
+                    <a class = "menu-mobile"> 
                         <img class="nav-elem menu-mobile" src="assets/img/nav/voltar.svg">
                     </a>
                 </div>
@@ -162,11 +162,15 @@
 
 <!-- Opção sair - fazer o css  -->
 <div id="modal-sair">
-    <img class="btn-close" id="fechar" scr="assets/img/fechar.png">
-    <!--Não sei porque nao ta funcionando-->
+    <div class="btn-close" id="fechar"></div>
     <div class="espaco-6"></div>
     <div class="espaco-6"></div>
-    <img  class="modal-exclamacao" scr="assets/img/exclamacao.svg">
+    <div class="modal-exclamacao"></div>
+    <div class="espaco-6"></div>
+    <div class="espaco-6"></div>
+    <div class="espaco-6"></div>
+    <div class="espaco-6"></div>
+    <div class="espaco-6"></div>
     <div class="espaco-6"></div>
     <h1 class="fonte-modal-sair-destaque"> Sair do jogo </h1> 
     <div class="espaco-3"></div>
