esquema de fases e niveis pronto

--- a/fim.html
+++ b/fim.html
@@ -170,7 +170,7 @@
         <div class="espaco-6"></div>
 
         <div class="col">
-            <a class="btn btn-primary btn-medio" href="jogo.html" id="inicio" > INÍCIO  </a>  
+            <a class="btn btn-primary btn-medio" href="index.html" id="inicio" > INÍCIO  </a>  
         </div>
 
         <div class="espaco-6"></div>
