Função para interligar niveis pronta

--- a/instrucoes.html
+++ b/instrucoes.html
@@ -163,18 +163,18 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="row">   
-                        <div class="card bg-style Inst1" id="cardI0">
+                        <div class="cardT bg-style Inst1" id="cardI0">
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row">
-                       <div class="seta"><img src="assets/img/seta-dupla.png"></div>
+                       <div class="seta"> <img src="assets/img/seta-dupla.png"></div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="row">
-                        <div class="card bg-style Inst1" id="cardI1"></div>
+                        <div class="cardT bg-style Inst1" id="cardI1"> </div>
                     </div>
                 </div>
             </div>
