--- a/nivel.html
+++ b/nivel.html
@@ -11,12 +11,11 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
+    <link rel="stylesheet" href="assets/css/menu-desktop.css">
     
 </head>
-
+<!--Colar o novo menu desktop em todas as outras paginas-->
 <body>
- <!-- menu Desktop - esta com problemas por tags que eu usei em dois lugares, arrumar -->
-
     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
@@ -25,7 +24,6 @@
                 <img class="logo-eic-centro menu-desktop" src="assets/img/logo-eic-branco.png">
             </a>
         </li>
-        <li class = "menu-desktop espaco-6"></li>
         <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
@@ -38,7 +36,7 @@
             <div>
             </a>
         </li>
-        <li class = "menu-desktop espaco-3"></li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
             <a  class="menu-desktop" href="sobre-o-jogo.html">
             <div class=" menu-desktop elem-menu-lateral">
@@ -47,7 +45,7 @@
             <div>
             </a>
         </li>
-        <li class="menu-desktop espaco-3"></li>
+        <li class="menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="index.html">
             <div class="menu-desktop elem-menu-lateral">
@@ -56,7 +54,7 @@
             <div>
             </a>
         </li>
-        <li class = "menu-desktop espaco-3"></li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="compartilhar.html">
             <div class="menu-desktop elem-menu-lateral">
@@ -69,12 +67,10 @@
     </div>
 
     <div class="fundo">
-<!-- menu mobile-->
-    <div class="espaco-3"></div>
-    <div class="espaco-3 menu-mobile"></div>
+<!-- menu mobile- colocar nas outras paginas-->
     <div class="menu-mobile">
 
-        <div class="espaco-6 menu-mobile"></div>
+        <div class="espaco-2 menu-mobile"></div>
 
         <div class="row menu-mobile">
 
@@ -123,7 +119,6 @@
             <div>
             </a>
         </li>
-        <li><div class="espaco-6"></div></li>
          <li>
             <a href="creditos.html">
             <div class= "elem-menu-modal">
@@ -132,7 +127,6 @@
             <div>
             </a>
         </li>
-         <li><div class="espaco-6"></div></li>
          <li>
             <a href="compartilhar.html">
             <div class= "elem-menu-modal">
@@ -142,7 +136,7 @@
             </a>
         </li>
     </ul>
-    <div class="espaco-6"></div>
+    <div class="espaco-3"></div>
     <div id="botao-voltar"><p> Voltar </p></div>
 </div>
 
