--- a/jogo.html
+++ b/jogo.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Luckiest+Guy">
+
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/nivel.css">
-    <link rel="stylesheet" href="assets/css/jogo.css">
     <link rel="stylesheet" href="assets/css/menu-modal.css">
+    <link rel="stylesheet" href="assets/css/menu-desktop.css">
+    <link rel="stylesheet" href="assets/css/jogo.css">
     <link rel="stylesheet" href="assets/css/vitoria.css">
 
 </head>
@@ -19,7 +21,7 @@
 <body>
  <!-- menu Desktop - rodando perfeito -->
 
-    <div class="menu-desktop">
+     <div class="menu-desktop">
         <ul class="menu-desktop tipoUL">
         <li class = "espaco-6 menu-desktop"></li>
         <li> <!--Colocar o logo no centro-->
@@ -28,18 +30,18 @@
             </a>
         </li>
         <li class = "menu-desktop espaco-6"></li>
-        <li class = "menu-desktop espaco-6"></li>
         <li class="menu-desktop"> 
         <a href=" menu-desktop index.html"> </a>
+
         <li class="menu-desktop">
             <a href="index.html">
             <div class=" menu-desktop elem-menu-lateral">
-            <img  class ="menu-desktop" src="assets/img/home.svg">
+            <img  class ="menu-desktop alinhamento" src="assets/img/home.svg">
             <p class="menu-desktop"> Início <p> 
             <div>
             </a>
         </li>
-        <li class =  "menu-desktop espaco-3"></li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
             <a  class="menu-desktop" href="sobre-o-jogo.html">
             <div class=" menu-desktop elem-menu-lateral">
@@ -48,7 +50,7 @@
             <div>
             </a>
         </li>
-        <li class="menu-desktop espaco-3"></li>
+        <li class="menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="index.html">
             <div class="menu-desktop elem-menu-lateral">
@@ -57,10 +59,10 @@
             <div>
             </a>
         </li>
-        <li class = "menu-desktop espaco-3"></li>
+        <li class = "menu-desktop espaco-2"></li>
         <li>
             <a class="menu-desktop" href="compartilhar.html">
-            <div class="menu- desktop elem-menu-lateral">
+            <div class="menu-desktop elem-menu-lateral">
             <img  class="menu-desktop" src="assets/img/compartilhar.svg">
             <p class="menu-desktop"> Compartilhar <p> 
             <div>
@@ -69,14 +71,10 @@
         </ul>
     </div>
 
-
     <div class="fundo">
 <!-- menu mobile-->
-    <div class="espaco-3"></div>
-    <div class="espaco-3 menu-mobile"></div>
+    <div class="espaco-1"></div>
     <div class="menu-mobile">
-
-        <div class="espaco-6 menu-mobile"></div>
 
         <div class="row menu-mobile">
 
@@ -153,7 +151,7 @@
 <!--fim menu mobile-->
 <!-- Conteúdo da página -->
 
-    <div class="espaco-3"> </div>
+    <div class="espaco-1"> </div>
     <div class="row menu-desktop">
         <div id="btn-voltar-d">
         <img class="img-voltar" src="assets/img/nav/voltar.svg">
@@ -181,14 +179,13 @@
     </div>
 </div>
 
-<!-- Fim opção sair -->    
-    <h1 class="subtitulo-2" id="titulo-jogo">TEMPO</h1>
+<!-- Fim opção sair -->   
+
+    <div class="subtitulo-2" id="titulo-jogo">TEMPO</div>
 
     <div class="espaco-1"></div>
-    <div class="espaco-3 mostrar-no-desktop"> </div>
     <p class="largura-texto"> Observe os cartões e memorize as posições! </p>
   
-
 <!-- Painel ensinando como jogar -->
 
 <div id="container">
