Refatoração do desing

--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
         <div class="col"><a class="btn btn-primary" href="instrucoes.html"> INICIAR </a></div>
     </div>
     
-    <div class="caixa-btns-c display-center">
+
+    <!-- A classe elem-btn-c serve apenas para fins de identificação e não esta atrelada a nenhuma classe css-->
+    <div class="display-center">
         <div class = "elem-btn-c">
-        <div class="btn-circ" id="btn-circ-1"> <a href="instrucoes.html"> <img src="assets/img/botao-instruções.svg"></a></div>
+        <div> <a href="instrucoes.html"> <img src="assets/img/botao-instruções.svg"></a></div>
         </div>
         <div class = "elem-btn-c">
-        <div class="btn-circ" id="btn-circ-2"> <a href="creditos.html"> <img src="assets/img/botao-creditos.svg"></a></div>
+        <div> <a href="creditos.html"> <img src="assets/img/botao-creditos.svg"></a></div>
         </div>
-        <div class="btn-circ" id="btn-circ-3"> <a href="compartilhar.html"> <img src="assets/img/botao-compartilhar.svg"> </a></div>
+        <div class = "elem-btn-c">
+        <div> <a href="compartilhar.html"> <img src="assets/img/botao-compartilhar.svg"> </a></div>
+        </div>
      </div>
 
     <div class="espaco-3"></div>
