--- a/jogo.html
+++ b/jogo.html
@@ -188,7 +188,7 @@
   
 <!-- Painel ensinando como jogar -->
 
-<div id="container">
+<div id="container"> 
 
     <div class="card" id="card0">
         <div class="face back">  </div>
@@ -260,7 +260,7 @@
     </div>
 
     <!--display de pontos -->
-    <div class="display-center">
+    <div class="points-position-game">
         <div class="points-box">
             <img  class="medal" src="assets/img/medalha.svg">
             <p id="points" class="points"> 000 </p>
